--- a/style.css
+++ b/style.css
@@ -49,12 +49,12 @@ textarea {
 }
 
 .present {
-  background-color: #ff6961;
+  background-color: #ffa78c;
   color: white;
 }
 
 .future {
-  background-color: #77dd77;
+  background-color: #add9f7;
   color: white;
 }
 
